Update run-liquibase.sh